[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = "telemetry-wthr"
url = "https://github.com/thatlarrypearson/telemetry-wthr"
version = "0.0.0"
description = "IPV4 UDP Packet Broadcast and Receive Classes"
long_description = "file:README.md"
authors = [
    "Larry Pearson <no-reply@gmail.com>",
]
license = "MIT"
readme = "README.md"
python = "3.11"
homepage = "https://github.com/thatlarrypearson/telemetry-wthr"
repository = "https://github.com/thatlarrypearson/telemetry-wthr"
documentation = "https://github.com/thatlarrypearson/telemetry-wthr"
keywords = ["IPV4", "IP", "UDP", "broadcast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


